# taggy

./: .gitignore  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  todo.norg  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  publish.yml
src/: App.svelte  App.tsx  app.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: taggy.xcf
src-tauri/src/: audio.rs  cli.rs  error.rs  lib.rs  main.rs  serresult.rs
src/components/: AppContext.tsx  AudioList.tsx  AudioPreview.tsx  AudioRow.tsx  AudioTagger.tsx  Autocomplete.tsx  DirectoryButton.tsx  DragOverlay.tsx  EmptySelection.tsx  FilterButton.tsx  FilterPopover.tsx  NumericPairInput.tsx  SortButton.tsx  TagEditor.tsx  TagInput.tsx  TagMenu.tsx  ThemeSelector.tsx  ToastProvider.tsx
src/components/ui/: badge.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  popover.tsx  slider.tsx  textfield.tsx  toast.tsx
src/hooks/: useMobile.ts  useTheme.ts
src/lib/: DirPopup.svelte  MainWindow.svelte
src/styles/: globals.css
