[package]
name = "taggy"
version = "0.1.0"
description = "Program that allows for easy manipulation of audio file tags. Running with no arguments opens the GUI version"
authors = ["Cyanism"]
license = "GPL-3.0"
repository = "https://www.github.com/Cyanistic/taggy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
anyhow = "1.0.72"
audiotags = "0.4.1"
base64 = "0.21.2"
libc = "0.2.147"
tauri = { version = "1.4", features = [ "path-all", "fs-read-dir", "dialog-all"] }
thiserror = "1.0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
