[package]
name = "taggy"
version = "0.1.0"
description = "Manipulate audio tags with ease"
authors = ["Cyanism <github@cyan.slmail.me>"]
license = "GPL-3.0"
repository = "https://www.github.com/Cyanistic/taggy"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taggy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
audiotags = "0.5.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri-plugin-opener = "2"
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2.0.12"
color-eyre = "0.6.3"
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
base64 = "0.22.1"
mime_guess = "2.0.5"
tauri-plugin-os = "2"
