[package]
name = "taggy"
version = "0.1.0"
description = "Manipulate audio tags with ease"
authors = ["Cyanism <github@cyan.slmail.me>"]
license = "GPL-3.0"
repository = "https://www.github.com/Cyanistic/taggy"
edition = "2024"
default-run = "gui"

[[bin]]
name = "gui"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "cli"
path = "src/cli.rs"
required-features = ["cli"]

[features]
default = ["gui"]
gui= [
  "tauri/protocol-asset",
  "tauri-plugin-opener",
  "tauri-plugin-dialog",
  "tauri-plugin-os",
  "tauri-plugin-fs"
]
cli = []

[profile.release]
opt-level = "s"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.dev]
opt-level = 1
debug = false
strip = "debuginfo"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taggy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
audiotags = "0.5.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri-plugin-opener = { version = "2", optional = true }
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2.0.12"
color-eyre = "0.6.3"
tauri-plugin-dialog = { version = "2", optional = true }
walkdir = "2.5.0"
base64 = "0.22.1"
mime_guess = "2.0.5"
tauri-plugin-os = { version = "2", optional = true }
id3 = "1.16.2"
serde_nested_with = "0.2.5"
tauri-plugin-fs = { version = "2", optional = true }
